test/fail/basic_syntax/return_outside_function.lly
#[
SyntaxError: 'return' used outside of a function.
    from return_outside_function.lly:6
]#

return
